fix: update asset paths for consistency and add favicon link

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
 
     <title>Prepará tu startup para atraer inversión | Santiago Aramendía</title>
     <meta
@@ -44,7 +45,7 @@
       >
         <a href="#top">
           <img
-            src="/assets/logo-aramendia-light.svg"
+            src="assets/logo-aramendia-light.svg"
             alt="Santiago Aramendía Logo"
             class="h-12"
           />
@@ -64,7 +65,7 @@
       <!-- ================= HERO ================= -->
       <section
         id="hero"
-        class="px-6 py-16 max-w-7xl mx-auto grid gap-10 md:grid-cols-2 items-center bg-[url('/assets/images/bg-padrao.webp')] bg-cover bg-center"
+        class="px-6 py-16 max-w-7xl mx-auto grid gap-10 md:grid-cols-2 items-center bg-[url('assets/images/bg-padrao.webp')] bg-cover bg-center"
       >
         <!-- Texto -->
         <div>
@@ -116,7 +117,7 @@
       >
         <div class="size-60 rounded-full mb-6 bg-secondary overflow-hidden">
           <img
-            src="/assets/images/santiago-aramendia.webp"
+            src="assets/images/santiago-aramendia.webp"
             alt="Santiago Aramendía"
             class="object-cover w-full h-full"
           />
@@ -136,7 +137,7 @@
           <ul class="space-y-3 mb-8">
             <li class="flex items-center gap-1">
               <img
-                src="/assets/images/check-secondary.svg"
+                src="assets/images/check-secondary.svg"
                 alt="Secondary Check Icon"
                 class="size-6"
               />
@@ -144,21 +145,21 @@
             </li>
             <li class="flex items-center gap-1">
               <img
-                src="/assets/images/check-secondary.svg"
+                src="assets/images/check-secondary.svg"
                 alt="Secondary Check Icon"
                 class="size-6"
               />Experiencia internacional
             </li>
             <li class="flex items-center gap-1">
               <img
-                src="/assets/images/check-secondary.svg"
+                src="assets/images/check-secondary.svg"
                 alt="Secondary Check Icon"
                 class="size-6"
               />Especialista en estructuración de negocios y pitch
             </li>
             <li class="flex items-center gap-1">
               <img
-                src="/assets/images/check-secondary.svg"
+                src="assets/images/check-secondary.svg"
                 alt="Secondary Check Icon"
                 class="size-6"
               />
@@ -167,13 +168,13 @@
           </ul>
 
           <a
-            href="https://linkedin.com"
+            href="https://www.linkedin.com/in/santiagoaramendia/"
             target="_blank"
             rel="noopener noreferrer"
             class="inline-flex items-center gap-2 text-secondary font-medium uppercase tracking-wider border border-secondary px-6 py-3 rounded-full hover:bg-secondary/20 transition-colors"
           >
             <img
-              src="/assets/images/linkedin-box-fill.svg"
+              src="assets/images/linkedin-box-fill.svg"
               alt=""
               class="size-10"
             />
@@ -183,7 +184,10 @@
       </section>
 
       <!-- ================= PROGRAM ================= -->
-      <section id="program" class="px-6 py-20 bg-white text-primary">
+      <section
+        id="program"
+        class="px-6 py-20 bg-white text-primary scroll-m-[118px]"
+      >
         <div
           class="max-w-5xl mx-auto flex flex-col md:flex-row gap-10 items-center"
         >
@@ -201,35 +205,35 @@
             <ul class="space-y-4 mb-8">
               <li class="flex items-center gap-1">
                 <img
-                  src="/assets/images/check-primary.svg"
+                  src="assets/images/check-primary.svg"
                   alt="Secondary Check Icon"
                   class="size-6"
                 />One Pager profesional
               </li>
               <li class="flex items-center gap-1">
                 <img
-                  src="/assets/images/check-primary.svg"
+                  src="assets/images/check-primary.svg"
                   alt="Secondary Check Icon"
                   class="size-6"
                 />Pitch Deck claro y estratégico
               </li>
               <li class="flex items-center gap-1">
                 <img
-                  src="/assets/images/check-primary.svg"
+                  src="assets/images/check-primary.svg"
                   alt="Secondary Check Icon"
                   class="size-6"
                 />Plan de negocio
               </li>
               <li class="flex items-center gap-1">
                 <img
-                  src="/assets/images/check-primary.svg"
+                  src="assets/images/check-primary.svg"
                   alt="Secondary Check Icon"
                   class="size-6"
                 />Crafteo y entrenamiento de Pitch
               </li>
               <li class="flex items-center gap-1">
                 <img
-                  src="/assets/images/check-primary.svg"
+                  src="assets/images/check-primary.svg"
                   alt="Secondary Check Icon"
                   class="size-6"
                 />Acompañamiento personalizado
@@ -242,7 +246,7 @@
             </p>
           </div>
           <div class="w-1/2">
-            <img src="/assets/images/startup-ilustration.svg" alt="" />
+            <img src="assets/images/startup-ilustration.svg" alt="" />
           </div>
         </div>
       </section>
@@ -289,7 +293,7 @@
       <!-- ================= SOCIAL PROOF ================= -->
       <section
         id="social-proof"
-        class="px-6 py-20 bg-primary/90 bg-[url('/assets/images/bg-padrao.webp')] bg-cover bg-center"
+        class="px-6 py-20 bg-primary/90 bg-[url('assets/images/bg-padrao.webp')] bg-cover bg-center"
       >
         <div class="max-w-5xl mx-auto">
           <h2 class="text-2xl md:text-4xl font-bold mb-10">
@@ -356,7 +360,7 @@
     <!-- ================= FOOTER ================= -->
     <footer class="px-6 py-10 text-center text-sm bg-slate-900/90">
       <img
-        src="/assets/logo-aramendia-light.svg"
+        src="assets/logo-aramendia-light.svg"
         alt="Santiago Aramendía"
         class="h-12 mx-auto mb-4"
       />
