--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           href="#application"
           class="hidden md:inline-block text-sm font-medium uppercase tracking-wider py-4 px-8 border border-white/40 rounded-full hover:bg-secondary/75 transition-colors bg-secondary text-primary"
         >
-          Aplicar al programa
+          Aplicar tu startup
         </a>
       </div>
     </header>
@@ -68,7 +68,7 @@
         class="px-6 py-16 max-w-7xl mx-auto grid gap-10 md:grid-cols-2 items-center bg-[url('assets/images/bg-padrao.webp')] bg-cover bg-center"
       >
         <!-- Texto -->
-        <div>
+        <div class="order-2 md:order-none">
           <h1 class="text-3xl md:text-5xl font-bold leading-tight">
             Prepará tu startup<br />
             <span class="text-secondary">para atraer inversión real</span>
@@ -92,7 +92,7 @@
               href="#program"
               class="border border-white/40 px-6 py-3 rounded-lg text-center"
             >
-              Conocer el programa
+              Conocer más
             </a>
           </div>
         </div>
