--- a/index.html
+++ b/index.html
@@ -344,13 +344,16 @@
 
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
           <a
-            href="#"
+            href="#application"
             class="bg-secondary text-primary font-semibold px-8 py-4 rounded-xl"
           >
             Agendá tu llamada
           </a>
 
-          <a href="#" class="border border-white/40 px-8 py-4 rounded-xl">
+          <a
+            href="#program"
+            class="border border-white/40 px-8 py-4 rounded-xl"
+          >
             Quiero saber más
           </a>
         </div>
